2003-01-12  Gerhard Jaeger <gerhard@gjaeger.de>

	* doc/descriptions/plustek.desc: Removed the unsupported stuff
	* doc/descriptions/unsupported.desc: Removed OpticPro 16B.

2003-01-12  Michael Herder  <crapsite@gmx.net>

	* doc/descriptions/artec_eplus48u.desc:  Added new
	  models.

2002-01-11  Jochen Eisinger <jochen.eisinger@gmx.de>

	* sanei/sanei_pa4s2.h: prepared sanei for use with fork()ing
	  backends

2003-01-11  Gerhard Jaeger <gerhard@gjaeger.de>

	* doc/descriptions/plustek.desc: Update to reflect the currently
	  supported decvices.
	* doc/descriptions/unsupported.desc: Added some Plustek devices.
	  CanoScan N1220U is now supported by the Plustek backend.
	* doc/plustek: Added this directory to store various Plustek
	  information files.

2003-01-11  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc
	  doc/descriptions-external/primax.desc: Some Primax scanners (and
	  clones) are now supported by the primax backend.
	* backend/microtek.c backend/microtek2.conf backend/microtek2.h:
	  OPT_THRESHOLD fix. Avoid using "_" in option names. Set more
	  options in microtek2.conf to on by default. From Karsten Festag
	  <karsten.festag@gmx.de>.
	* tools/sane-desc.c: Fixed overwrite warnings. Minor DBG message fixes.
	  Fixed priority handling (backend and manpage were overwritten even if
	  a model had a lower priority).
	* tools/README: Updated sane-find-scanner and sane-desc.el entries.
	* doc/sane-gt68xx.man doc/sane-mustek_usb.man: Updated status for the
	  BSDs.

2003-01-10  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* po/sane-backends.pt.po: Even more Portuguese translations from
	  Pedro Morais <morais@inocam.com>.
	* sanei/sanei_usb.c: Comment out resetep at sane_close. This 
	  function sets th USB data toggle only on the host side.
	* TODO: Removed microtek2 problem, updated Irix patch section and
	  Linux/Sparc section.
	* NEWS: Updated for 1.0.10.
	* backend/mustek.c: Removed hardcoded option size.
