@@ -15,11 +15,21 @@
 #    JX-250 is used. Bigger values are only a waste of memory.
 #
 #    For other operationg systems, set this value to zero
+#
+# option stop_on_fsu_error: should be 0 or 1. If set to 0,
+#    the "FSU light dispersion error" does not cause the abortion
+#    of a scan.
+#
+# option default_scan_source: valid values are "auto", "fsu", "adf"
+#    and "flatbed". For "auto", the backend will enable an ADF or
+#    or FSU, if installed. 
 #    
 # global options:
 option buffers 4
 option buffersize 131072
 option readqueue 2
+option stop_on_fsu_error 1
+option default_scan_source auto
 # look for all devices with vendor ID "SHARP" and type "Scanner"
 scsi SHARP * Scanner
 # no options specific to these devices listed -> use global options
